--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- Уведомление о полноэкранном режиме -->
     <div id="fullscreenWarning">
-        Игра работает в полноэкранном режиме. Не закрывайте её случайно!
+        <!-- Игра работает в полноэкранном режиме. Не закрывайте её случайно! -->
     </div>
 
     <!-- Звуковые эффекты (только OGG) -->
