--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             display: flex;
             align-items: flex-start;
             gap: 20px;
+            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
         }
         canvas {
             border: 2px solid white;
@@ -30,7 +31,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 15%;
+            height: 15vh; /* Высота сенсорной зоны */
             background-color: rgba(255, 255, 255, 0.1);
             z-index: 1000;
             touch-action: none;
@@ -77,20 +78,6 @@
         #restartButton:hover {
             background-color: #666;
         }
-        #orientationWarning {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            font-size: 24px;
-            text-align: center;
-            padding-top: 20%;
-            z-index: 2000;
-        }
     </style>
 </head>
 <body>
@@ -117,11 +104,6 @@
         </div>
     </div>
 
-    <!-- Предупреждение об ориентации -->
-    <div id="orientationWarning">
-        Пожалуйста, поверните устройство в портретную ориентацию для продолжения игры.
-    </div>
-
     <!-- Звуковые эффекты (только OGG) -->
     <audio id="shootSound" src="shoot.ogg"></audio>
     <audio id="explosionSound" src="explosion.ogg"></audio>
@@ -135,54 +117,32 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
-        const MIN_CANVAS_WIDTH = 300;
-        const MAX_CANVAS_WIDTH = 600;
-        const MIN_CANVAS_HEIGHT = 500;
-        const MAX_CANVAS_HEIGHT = 1000;
+        const gameWidth = Math.min(window.innerWidth - 40, 400); // Адаптивная ширина
+        const gameHeight = Math.min(window.innerHeight - 200, 900); // Адаптивная высота
+        canvas.width = gameWidth;
+        canvas.height = gameHeight;
 
-        let gameWidth, gameHeight;
+        // Загружаем изображения
+        const backgroundImage = new Image();
+        backgroundImage.src = 'topographic-map.jpg';
 
-        function resizeCanvas() {
-            const aspectRatio = 0.6;
-            const screenWidth = window.innerWidth;
-            const screenHeight = window.innerHeight;
+        const playerImage = new Image();
+        playerImage.src = 'player.png';
 
-            let canvasWidth = screenWidth * 0.9;
-            let canvasHeight = canvasWidth / aspectRatio;
+        const infantryImage = new Image();
+        infantryImage.src = 'infantry.png';
 
-            canvasWidth = Math.max(MIN_CANVAS_WIDTH, Math.min(canvasWidth, MAX_CANVAS_WIDTH));
-            canvasHeight = Math.max(MIN_CANVAS_HEIGHT, Math.min(canvasHeight, MAX_CANVAS_HEIGHT));
+        const tankImage = new Image();
+        tankImage.src = 'tank.png';
 
-            canvas.width = canvasWidth;
-            canvas.height = canvasHeight;
-
-            gameWidth = canvasWidth;
-            gameHeight = canvasHeight;
-
-            player.x = canvas.width / 2 - player.width / 2;
-            player.y = canvas.height - player.height - 10;
-        }
-
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
-
-        function scaleObjectSize(baseSize, canvasDimension) {
-            return baseSize * (canvasDimension / 600);
-        }
-
-        function scaleSpeed(baseSpeed, canvasDimension) {
-            return baseSpeed * (canvasDimension / 600);
-        }
-
-        function scaleFontSize(baseSize, canvasDimension) {
-            return baseSize * (canvasDimension / 600);
-        }
+        const rocketLauncherImage = new Image();
+        rocketLauncherImage.src = 'rocket_launcher.png';
 
         const player = {
             x: canvas.width / 2 - 15,
             y: canvas.height - 40,
-            width: scaleObjectSize(25, canvas.width),
-            height: scaleObjectSize(30, canvas.height),
+            width: 25,
+            height: 30,
             speed: 20,
             color: 'green',
             missiles: [],
@@ -211,26 +171,28 @@
         let rocketLauncherCount = 0;
         let infantryHitCounter = 0;
 
+        let enemySpawnInterval;
+
         const enemyTypes = [
-            { type: 'пехота', width: scaleObjectSize(10, canvas.width), height: scaleObjectSize(11, canvas.height), baseSpeed: scaleSpeed(0.33, canvas.height), color: 'blue', score: 10, probability: 0.6 },
-            { type: 'танк', width: scaleObjectSize(20, canvas.width), height: scaleObjectSize(25, canvas.height), baseSpeed: scaleSpeed(1, canvas.height), color: 'black', score: 20, probability: 0.3 },
-            { type: 'РСЗО', width: scaleObjectSize(25, canvas.width), height: scaleObjectSize(35, canvas.height), baseSpeed: scaleSpeed(0.17, canvas.height), color: 'orange', score: 30, probability: 0.1 }
+            { type: 'пехота', width: 10, height: 11, baseSpeed: 0.33, color: 'blue', score: 10, probability: 0.6 },
+            { type: 'танк', width: 20, height: 25, baseSpeed: 1, color: 'black', score: 20, probability: 0.3 },
+            { type: 'РСЗО', width: 25, height: 35, baseSpeed: 0.17, color: 'orange', score: 30, probability: 0.1 }
         ];
 
         const enemyShootingParams = {
             пехота: {
                 cooldown: 15000,
-                bulletSize: { width: scaleObjectSize(3, canvas.width), height: scaleObjectSize(6, canvas.height) },
+                bulletSize: { width: 3, height: 6 },
                 type: 'single'
             },
             танк: {
                 cooldown: 60000,
-                bulletSize: { width: scaleObjectSize(5, canvas.width), height: scaleObjectSize(10, canvas.height) },
+                bulletSize: { width: 5, height: 10 },
                 type: 'single'
             },
             РСЗО: {
                 cooldown: 30000,
-                bulletSize: { width: scaleObjectSize(5, canvas.width), height: scaleObjectSize(10, canvas.height) },
+                bulletSize: { width: 5, height: 10 },
                 type: 'burst',
                 burstCount: 5
             }
@@ -257,6 +219,7 @@
             sound.play();
         }
 
+        // Логика для сенсорного ползунка
         const touchpad = document.getElementById('touchpad');
         let isTouching = false;
         let touchStartX = 0;
@@ -292,19 +255,6 @@
             isTap = false;
         });
 
-        function checkOrientation() {
-            if (window.innerWidth > window.innerHeight) {
-                isPaused = true;
-                document.getElementById('orientationWarning').style.display = 'block';
-            } else {
-                isPaused = false;
-                document.getElementById('orientationWarning').style.display = 'none';
-            }
-        }
-
-        window.addEventListener('resize', checkOrientation);
-        checkOrientation();
-
         function getRandomEnemyType() {
             const random = Math.random();
             let cumulativeProbability = 0;
@@ -336,8 +286,9 @@
 
         function drawPlayer() {
             const sway = Math.sin(Date.now() / 200) * 2;
-            ctx.fillStyle = player.color;
-            ctx.fillRect(player.x + sway, player.y, player.width, player.height);
+            if (playerImage.complete) {
+                ctx.drawImage(playerImage, player.x + sway, player.y, player.width, player.height);
+            }
         }
 
         function drawMissiles() {
@@ -372,8 +323,21 @@
                     ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
                     enemy.hit = false;
                 } else {
-                    ctx.fillStyle = enemy.color;
-                    ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+                    let image;
+                    switch (enemy.type) {
+                        case 'пехота':
+                            image = infantryImage;
+                            break;
+                        case 'танк':
+                            image = tankImage;
+                            break;
+                        case 'РСЗО':
+                            image = rocketLauncherImage;
+                            break;
+                    }
+                    if (image && image.complete) {
+                        ctx.drawImage(image, enemy.x, enemy.y, enemy.width, enemy.height);
+                    }
                 }
                 enemy.y += enemy.speed;
 
@@ -692,8 +656,9 @@
         document.getElementById('restartButton').addEventListener('click', restartGame);
 
         function drawBackground() {
-            ctx.fillStyle = '#000';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            if (backgroundImage.complete) {
+                ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+            }
         }
 
         function drawHealthBar() {
@@ -772,17 +737,17 @@
         }
 
         function gameLoop() {
-            if (isPaused) {
-                drawPauseMenu();
-                requestAnimationFrame(gameLoop);
-                return;
-            }
-
             if (gameOver || player.health <= 0) {
                 updateHighScore();
                 stopBackgroundMusic();
                 updateScoreboard();
                 document.getElementById('scoreModal').style.display = 'flex';
+                return;
+            }
+
+            if (isPaused) {
+                drawPauseMenu();
+                requestAnimationFrame(gameLoop);
                 return;
             }
 
