--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Залповый огонь</title>
+    <title>Тосочка: Залповый огонь</title>
     <style>
         body {
             margin: 0;
@@ -432,7 +432,8 @@
                         height: enemyShootingParams.РСЗО.bulletSize.height,
                         angle: angle,
                         speed: 4,
-                        type: 'burst'
+                        type: 'burst',
+                        source: 'РСЗО' // Добавляем источник
                     });
                 }
             }
@@ -445,16 +446,22 @@
                     hitSound.currentTime = 0;
                     hitSound.play();
 
-                    switch (missile.source) {
-                        case 'пехота':
-                            player.health -= 10;
-                            break;
-                        case 'танк':
-                            player.health -= 50;
-                            break;
-                        case 'РСЗО':
-                            player.health = 0;
-                            break;
+                    // Проверяем наличие свойства source
+                    if (missile.source) {
+                        switch (missile.source) {
+                            case 'пехота':
+                                player.health -= 10;
+                                break;
+                            case 'танк':
+                                player.health -= 50;
+                                break;
+                            case 'РСЗО':
+                                player.health = 0; // Снаряды РСЗО мгновенно уничтожают игрока
+                                break;
+                        }
+                    } else if (missile.type === 'burst') {
+                        // Если source отсутствует, но тип снаряда - 'burst' (РСЗО), наносим урон
+                        player.health = 0; // Снаряды РСЗО мгновенно уничтожают игрока
                     }
 
                     if (player.health < 0) {
