--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             display: flex;
             align-items: flex-start;
             gap: 20px;
-            margin-bottom: 15vh; /* Отступ снизу для сенсорной зоны */
+            margin-bottom: 15vh;
         }
         canvas {
             border: 2px solid white;
@@ -31,7 +31,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 15vh; /* Высота сенсорной зоны */
+            height: 15vh;
             background-color: rgba(255, 255, 255, 0.1);
             z-index: 1000;
             touch-action: none;
@@ -78,6 +78,20 @@
         #restartButton:hover {
             background-color: #666;
         }
+        #orientationWarning {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            padding-top: 40%;
+            z-index: 2000;
+        }
     </style>
 </head>
 <body>
@@ -104,6 +118,11 @@
         </div>
     </div>
 
+    <!-- Сообщение о необходимости повернуть устройство -->
+    <div id="orientationWarning">
+        Пожалуйста, поверните устройство в портретную ориентацию для игры.
+    </div>
+
     <!-- Звуковые эффекты (только OGG) -->
     <audio id="shootSound" src="shoot.ogg"></audio>
     <audio id="explosionSound" src="explosion.ogg"></audio>
@@ -117,8 +136,8 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
-        const gameWidth = Math.min(window.innerWidth - 40, 400); // Адаптивная ширина
-        const gameHeight = Math.min(window.innerHeight - 200, 900); // Адаптивная высота
+        const gameWidth = Math.min(window.innerWidth - 40, 400);
+        const gameHeight = Math.min(window.innerHeight - 200, 900);
         canvas.width = gameWidth;
         canvas.height = gameHeight;
 
@@ -433,7 +452,7 @@
                         angle: angle,
                         speed: 4,
                         type: 'burst',
-                        source: 'РСЗО' // Добавляем источник
+                        source: 'РСЗО'
                     });
                 }
             }
@@ -446,7 +465,6 @@
                     hitSound.currentTime = 0;
                     hitSound.play();
 
-                    // Проверяем наличие свойства source
                     if (missile.source) {
                         switch (missile.source) {
                             case 'пехота':
@@ -456,12 +474,11 @@
                                 player.health -= 50;
                                 break;
                             case 'РСЗО':
-                                player.health = 0; // Снаряды РСЗО мгновенно уничтожают игрока
+                                player.health = 0;
                                 break;
                         }
                     } else if (missile.type === 'burst') {
-                        // Если source отсутствует, но тип снаряда - 'burst' (РСЗО), наносим урон
-                        player.health = 0; // Снаряды РСЗО мгновенно уничтожают игрока
+                        player.health = 0;
                     }
 
                     if (player.health < 0) {
@@ -775,6 +792,23 @@
 
             requestAnimationFrame(gameLoop);
         }
+
+        // Проверка ориентации устройства
+        function checkOrientation() {
+            const orientationWarning = document.getElementById('orientationWarning');
+            const isLandscape = window.innerWidth > window.innerHeight;
+
+            if (isLandscape) {
+                orientationWarning.style.display = 'block';
+                isPaused = true;
+            } else {
+                orientationWarning.style.display = 'none';
+                isPaused = false;
+            }
+        }
+
+        window.addEventListener('load', checkOrientation);
+        window.addEventListener('resize', checkOrientation);
 
         // Ожидание загрузки всех изображений
         Promise.all([
